<resources>

    //Strings for MainActivity
    <string name="app_name">Tic Tac Toe</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="instructions">Please select one of the options below!</string>
    <string-array name="options">
        <item>Play Game</item>
        <item>Enter Names</item>
        <item>Standings</item>
    </string-array>

    //Strings for NameEntryActivity
    <string name="entry_prompt">Please enter player name</string>
    <string name="save_name_button">Save</string>

    //Strings for StandingsActivity
    <string name="standings_title">Current Standings</string>
    <string name="clear_btn">Clear Records</string>
    <string name="back_btn">Back</string>

    //Strings for GameActivity
    <string name="player_turn">Player 1 it is your turn!</string>
    <string name="restart_btn">Restart</string>

    //Cell Content Descriptions
    <string name="one">1,1</string>
    <string name="two">1,2</string>
    <string name="three">1,3</string>
    <string name="four">2,1</string>
    <string name="five">2,2</string>
    <string name="six">2,3</string>
    <string name="seven">3,1</string>
    <string name="eight">3,2</string>
    <string name="nine">3,3</string>

    //player dialog strings
    <string name="numPlayers">How many people are playing?</string>
    <string name="one_player">1 Player</string>
    <string name="two_player">2 Player</string>
    <string name="one_name">Please select name of player 1!</string>
    <string name="two_name">Please select name of player 2!</string>
    <string name="select_btn">Select</string>

</resources>