<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9D3D0"
    tools:context=".NameEntryActivity">

    <EditText
        android:id="@+id/player_name"
        android:layout_width="248dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="false"
        android:hint="PlayerName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_prompt" />

    <TextView
        android:id="@+id/entry_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:fontFamily="monospace"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/entry_prompt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/save_name"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="monospace"
        android:text="@string/save_name_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <android.widget.Button
        android:id="@+id/back"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_style"
        android:fontFamily="monospace"
        android:text="@string/back_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_name" />
</androidx.constraintlayout.widget.ConstraintLayout>